@@ -3800,7 +3800,7 @@ static int
 process_run (const char *name)
 {
 	int		ret, status;
-	size_t	curr_size;
+	size_t		curr_size;
 	const char	*buffer;
 
 	if (cb_compile_level < CB_LEVEL_MODULE) {
@@ -3831,12 +3831,23 @@ process_run (const char *name)
 	} else {  /* executable */
 		/* only add COB_EXE_EXT if it is not specified */
 		buffer = file_extension (name);
-		if (COB_EXE_EXT[0] && strcasecmp (buffer, COB_EXE_EXT + 1)) {
-			curr_size = snprintf (cobc_buffer, cobc_buffer_size, ".%c%s%s",
-				SLASH_CHAR, name, COB_EXE_EXT);
+		/* only prefix with ./ if there is no directory portion in name */
+		if (strchr (name, SLASH_CHAR) == NULL) {
+			if (COB_EXE_EXT[0] && strcasecmp (buffer, COB_EXE_EXT + 1)) {
+				curr_size = snprintf (cobc_buffer, cobc_buffer_size, ".%c%s%s",
+					SLASH_CHAR, name, COB_EXE_EXT);
+			} else {
+				curr_size = snprintf (cobc_buffer, cobc_buffer_size, ".%c%s",
+					SLASH_CHAR, name);
+			}
 		} else {
-			curr_size = snprintf (cobc_buffer, cobc_buffer_size, ".%c%s",
-				SLASH_CHAR, name);
+			if (COB_EXE_EXT[0] && strcasecmp (buffer, COB_EXE_EXT + 1)) {
+				curr_size = snprintf (cobc_buffer, cobc_buffer_size, "%s%s",
+					name, COB_EXE_EXT);
+			} else {
+				curr_size = snprintf (cobc_buffer, cobc_buffer_size, "%s",
+					name);
+			}
 		}
 	}
 #ifdef	_WIN32 /* "fix" given output name */
@@ -4124,10 +4135,6 @@ process (char *cmd)
 		ret = 0;
 	}
 	cobc_free (buffptr);
-
-	if ((ret == 0) && cobc_flag_run) {
-		ret = process_run (name);
-	}
 	return ret;
 }
 
@@ -7392,9 +7399,6 @@ process_module_direct (struct filename *fn)
 	}
 #endif
 #endif	/* _MSC_VER */
-	if ((ret == 0) && cobc_flag_run) {
-		ret = process_run (name);
-	}
 	return ret;
 }
 
@@ -7490,10 +7494,6 @@ process_module (struct filename *fn)
 	}
 #endif
 #endif	/* _MSC_VER */
-	/* cobcrun job? */
-	if ((ret == 0) && cobc_flag_run) {
-		ret = process_run (name);
-	}
 	return ret;
 }
 
@@ -7608,10 +7608,6 @@ process_library (struct filename *l)
 	}
 #endif
 #endif	/* _MSC_VER */
-	/* cobcrun job? */
-	if ((ret == 0) && cobc_flag_run) {
-		ret = process_run (name);
-	}
 	return ret;
 }
 
@@ -7737,11 +7733,6 @@ process_link (struct filename *l)
 #endif
 
 #endif	/* _MSC_VER */
-
-	/* run job? */
-	if ((ret == 0) && cobc_flag_run) {
-		ret = process_run (name);
-	}
 	return ret;
 }
 
@@ -8143,7 +8134,9 @@ main (int argc, char **argv)
 	unsigned int		iparams;
 	unsigned int		local_level;
 	int			status;
+	int			statuses;
 	int			i;
+	const char		*run_name = NULL;
 
 	/* Setup routines I */
 	begin_setup_internal_and_compiler_env ();
@@ -8258,6 +8251,10 @@ main (int argc, char **argv)
 
 	for (fn = file_list; fn; fn = fn->next) {
 		iparams++;
+		if (iparams == 1 && cobc_flag_run) {
+			run_name = fn->source;
+			//fprintf(stderr, "setting run_name :%s:, output_name :%s:, level %d\n", run_name, output_name, cb_compile_level);
+		}
 		if (iparams > 1 && cb_compile_level == CB_LEVEL_EXECUTABLE) {
 			/* only the first source has the compile_level and main flag set */
 			local_level = cb_compile_level;
@@ -8265,6 +8262,7 @@ main (int argc, char **argv)
 			cobc_flag_main = 0;
 		}
 		status = process_file (fn, status);
+		statuses += status;
 
 		/* take care for all intermediate files which aren't needed for linking */
 		clean_up_intermediates (fn, status);
@@ -8285,6 +8283,14 @@ main (int argc, char **argv)
 		cb_compile_level = CB_LEVEL_EXECUTABLE;
 	}
 
+	if ((cb_compile_level < CB_LEVEL_LIBRARY) && cobc_flag_run && run_name) {
+		//fprintf(stderr, "module run_name :%s:, output_name :%s:, level %d\n", run_name, output_name, cb_compile_level);
+		/* Run job after module with cobcrun */
+		if (status == 0) {
+			status = process_run (run_name);
+		}
+	}
+	
 	if (cb_compile_level < CB_LEVEL_LIBRARY
 	 || status || cb_flag_syntax_only) {
 		/* Finished */
@@ -8295,6 +8301,9 @@ main (int argc, char **argv)
 	/* Allocate objects buffer */
 	cobc_objects_buffer = cobc_main_malloc (cobc_objects_len);
 
+	/* All processing must be ok before a job run will be attempted */
+	statuses = 0;
+
 	if (file_list) {
 		/* Link */
 		if (cb_compile_level == CB_LEVEL_LIBRARY) {
@@ -8304,6 +8313,13 @@ main (int argc, char **argv)
 			/* Executable */
 			status = process_link (file_list);
 		}
+		statuses += status;
+	}
+
+	/* Run job after compile? Use first (or only) filename */
+	if ((statuses == 0) && cobc_flag_run && run_name) {
+		//fprintf(stderr, "run_name :%s:, output_name :%s:, level %d\n", run_name, output_name, cb_compile_level);
+		status = process_run (file_basename(run_name, NULL));
 	}
 
 	/* We have completed */
